--- a/assets/package.json
+++ b/assets/package.json
@@ -15,16 +15,25 @@
       }
     },
     "importmap": {
-      "@hotwired/stimulus": "^3.0.0",
-      "@editorjs/header": "^2.8.8"
+      "@editorjs/checklist": "^1.6.0",
+      "@editorjs/header": "^2.8.8",
+      "@editorjs/quote": "^2.7.6",
+      "@editorjs/table": "^2.4.4",
+      "@hotwired/stimulus": "^3.0.0"
     }
   },
   "peerDependencies": {
-    "@hotwired/stimulus": "^3.0.0",
-    "@editorjs/header": "^2.8.8"
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/table": "^2.4.4",
+    "@hotwired/stimulus": "^3.0.0"
   },
   "devDependencies": {
-    "@hotwired/stimulus": "^3.0.0",
-    "@editorjs/header": "^2.8.8"
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/table": "^2.4.4",
+    "@hotwired/stimulus": "^3.0.0"
   }
 }
