--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "symfony/dependency-injection": "^7.0",
         "symfony/http-kernel": "^7.0",
         "symfony/stimulus-bundle": "^2.22",
-        "symfony/twig-bundle": "^7.0",
-        "symfony/ux-live-component": "^2.24.0"
+        "symfony/twig-bundle": "^7.0"
     },
     "conflict": {
         "symfony/flex": "<1.13"
