--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/config": "^7.0",
         "symfony/dependency-injection": "^7.0",
         "symfony/http-kernel": "^7.0",
+        "symfony/orm-pack": "dev-main",
         "symfony/stimulus-bundle": "^2.22",
         "symfony/twig-bundle": "^7.0"
     },
@@ -43,5 +44,8 @@
             "url": "https://github.com/symfony/ux"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "symfony/maker-bundle": "^1.62.1"
+    }
 }
