--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     },
     "importmap": {
       "@editorjs/checklist": "^1.6.0",
+      "@editorjs/embed": "^2.7.6",
       "@editorjs/header": "^2.8.8",
       "@editorjs/quote": "^2.7.6",
       "@editorjs/table": "^2.4.4",
@@ -24,6 +25,7 @@
   },
   "peerDependencies": {
     "@editorjs/checklist": "^1.6.0",
+    "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@editorjs/checklist": "^1.6.0",
+    "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
