--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,14 @@
         "symfony-ux",
         "editorjs"
     ],
+    "homepage": "https://github.com/pentiminax/ux-editor",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Tanguy Lemarié",
+            "email": "tanguy.lemarie6@gmail.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Pentiminax\\UX\\Editor\\": "src/"
@@ -17,12 +24,6 @@
             "Pentiminax\\UX\\Editor\\Tests\\": "tests/"
         }
     },
-    "authors": [
-        {
-            "name": "Tanguy Lemarié",
-            "email": "tanguy.lemarie6@gmail.com"
-        }
-    ],
     "require": {
         "php": ">=8.2",
         "symfony/config": "^7.0",
@@ -35,6 +36,7 @@
         "phpunit/phpunit": "^11.5.17",
         "symfony/framework-bundle": "^7.0",
         "symfony/maker-bundle": "^1.62.1",
+        "symfony/var-dumper": "^7.0",
         "symfony/phpunit-bridge": "^7.0"
     },
     "conflict": {
