--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,9 @@
         "phpunit/phpunit": "^11.5.17",
         "symfony/framework-bundle": "^7.0",
         "symfony/maker-bundle": "^1.62.1",
-        "symfony/var-dumper": "^7.0",
-        "symfony/phpunit-bridge": "^7.0"
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/twig-bundle": "7.3.x-dev",
+        "symfony/var-dumper": "^7.0"
     },
     "conflict": {
         "symfony/flex": "<1.13"
