--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     },
     "importmap": {
       "@editorjs/checklist": "^1.6.0",
+      "@editorjs/code": "^2.9.3",
       "@editorjs/embed": "^2.7.6",
       "@editorjs/header": "^2.8.8",
       "@editorjs/image": "^2.10.2",
@@ -27,6 +28,7 @@
   },
   "peerDependencies": {
     "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
