Inline code tool

--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
       "@editorjs/embed": "^2.7.6",
       "@editorjs/header": "^2.8.8",
       "@editorjs/image": "^2.10.2",
+      "@editorjs/inline-code": "^1.5.1",
       "@editorjs/list": "^2.0.6",
       "@editorjs/quote": "^2.7.6",
       "@editorjs/table": "^2.4.4",
@@ -32,6 +33,7 @@
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
+    "@editorjs/inline-code": "^1.5.1",
     "@editorjs/list": "^2.0.6",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
@@ -43,6 +45,7 @@
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
+    "@editorjs/inline-code": "^1.5.1",
     "@editorjs/list": "^2.0.6",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
