--- a/assets/package.json
+++ b/assets/package.json
@@ -24,6 +24,7 @@
       "@editorjs/list": "^2.0.6",
       "@editorjs/marker": "^1.4.0",
       "@editorjs/quote": "^2.7.6",
+      "@editorjs/raw": "^2.5.1",
       "@editorjs/table": "^2.4.4",
       "@hotwired/stimulus": "^3.0.0"
     }
@@ -38,6 +39,7 @@
     "@editorjs/list": "^2.0.6",
     "@editorjs/marker": "^1.4.0",
     "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
     "@editorjs/table": "^2.4.4",
     "@hotwired/stimulus": "^3.0.0"
   },
@@ -51,6 +53,7 @@
     "@editorjs/list": "^2.0.6",
     "@editorjs/marker": "^1.4.0",
     "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
     "@editorjs/table": "^2.4.4",
     "@hotwired/stimulus": "^3.0.0"
   }
