--- a/assets/package.json
+++ b/assets/package.json
@@ -26,6 +26,7 @@
       "@editorjs/quote": "^2.7.6",
       "@editorjs/raw": "^2.5.1",
       "@editorjs/table": "^2.4.4",
+      "@editorjs/warning": "^1.4.1",
       "@hotwired/stimulus": "^3.0.0"
     }
   },
@@ -41,6 +42,7 @@
     "@editorjs/quote": "^2.7.6",
     "@editorjs/raw": "^2.5.1",
     "@editorjs/table": "^2.4.4",
+    "@editorjs/warning": "^1.4.1",
     "@hotwired/stimulus": "^3.0.0"
   },
   "devDependencies": {
@@ -55,6 +57,7 @@
     "@editorjs/quote": "^2.7.6",
     "@editorjs/raw": "^2.5.1",
     "@editorjs/table": "^2.4.4",
+    "@editorjs/warning": "^1.4.1",
     "@hotwired/stimulus": "^3.0.0"
   }
 }
