--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "importmap": {
       "@editorjs/checklist": "^1.6.0",
       "@editorjs/code": "^2.9.3",
+      "@editorjs/delimiter": "^1.4.2",
       "@editorjs/embed": "^2.7.6",
       "@editorjs/header": "^2.8.8",
       "@editorjs/image": "^2.10.2",
@@ -33,6 +34,7 @@
   "peerDependencies": {
     "@editorjs/checklist": "^1.6.0",
     "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@editorjs/checklist": "^1.6.0",
     "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
     "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
