--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,13 @@
         "symfony/config": "^7.0",
         "symfony/dependency-injection": "^7.0",
         "symfony/http-kernel": "^7.0",
-        "symfony/orm-pack": "^2.4.1",
         "symfony/stimulus-bundle": "^2.22"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5.17",
         "symfony/framework-bundle": "^7.0",
-        "symfony/maker-bundle": "^1.62.1",
         "symfony/phpunit-bridge": "^7.0",
-        "symfony/twig-bundle": "7.3.x-dev",
+        "symfony/twig-bundle": "^7.0",
         "symfony/var-dumper": "^7.0"
     },
     "conflict": {
