--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,9 @@ jobs:
       - name: Check for dangerous and broken dependencies
         run: composer audit
 
+      - name: Check PhpStan
+        run: vendor/bin/phpstan analyse --memory-limit -1
+
       - name: Run automated tests
         run: vendor/bin/phpunit --coverage-text --coverage-xml build/coverage-xml --coverage-cobertura build/cobertura.xml
       - name: Upload coverage reports to Codecov
