--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         run: composer audit
 
       - name: Check PhpStan
-        run: vendor/bin/phpstan analyse --memory-limit -1
+        run: vendor/bin/phpstan analyse --memory-limit=-1
 
       - name: Run automated tests
         run: vendor/bin/phpunit --coverage-text --coverage-xml build/coverage-xml --coverage-cobertura build/cobertura.xml
